--- a/MCMC method with RAPID fix for loop.ipynb
+++ b/MCMC method with RAPID fix for loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# 一些全局变量，放在这里好设置\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "# 使用连续小波变换获取ToF时间\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def def_get_array(def_get_locate):\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# 对所有catch信号获取ToF时间，返回选中的几组\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def def_ri(def_ri_select, def_ri_x, def_ri_y):\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def def_aij(def_aij_dmg, def_aij_baseline):\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "def fuc_rapid_pdf2(fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select):\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "def fuc_rapid_pdf(fuc_rapid_pdf_array):\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# 先验概率密度函数之比\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# 计算理论与实际的误差\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# 返回符合逆伽马分布的随机数\n",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "# MCMC方法本体\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "def def_plot_fig(def_pf_theta, def_pf_title):\n",
@@ -448,19 +448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "outputs": [
     {
      "ename": "IndexError",
-     "evalue": "index 509 is out of bounds for axis 0 with size 500",
+     "evalue": "index 514 is out of bounds for axis 0 with size 500",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [30]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m SHM_Data_baseline \u001B[38;5;241m=\u001B[39m def_get_array(SHM_Data_baseline_locate)\n\u001B[0;32m      4\u001B[0m tof, dmg_array \u001B[38;5;241m=\u001B[39m def_multi_tof(locate)\n\u001B[1;32m----> 5\u001B[0m theta \u001B[38;5;241m=\u001B[39m \u001B[43mdef_mcmc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdmg_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtof\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m def_plot_fig(theta, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[180, 345], [10, 10]\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "Input \u001B[1;32mIn [28]\u001B[0m, in \u001B[0;36mdef_mcmc\u001B[1;34m(def_mcmc_array, def_mcmc_tof)\u001B[0m\n\u001B[0;32m     19\u001B[0m theta_2 \u001B[38;5;241m=\u001B[39m def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m LK[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m*\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom() \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     20\u001B[0m theta_k \u001B[38;5;241m=\u001B[39m [theta_1, def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]]\n\u001B[1;32m---> 21\u001B[0m alpha \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf_pdf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtheta_k\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     22\u001B[0m r \u001B[38;5;241m=\u001B[39m alpha \u001B[38;5;241m*\u001B[39m math\u001B[38;5;241m.\u001B[39mexp(\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m \u001B[38;5;241m*\u001B[39m fuc_ig(def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m], def_mcmc_tof) \u001B[38;5;241m*\u001B[39m (fuc_q(theta_k, def_mcmc_tof) \u001B[38;5;241m-\u001B[39m fuc_q([def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m0\u001B[39m], def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]], def_mcmc_tof)))\n\u001B[0;32m     23\u001B[0m R \u001B[38;5;241m=\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom()\n",
-      "Input \u001B[1;32mIn [25]\u001B[0m, in \u001B[0;36mfuc_p\u001B[1;34m(fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2)\u001B[0m\n\u001B[0;32m      7\u001B[0m fuc_p_y2 \u001B[38;5;241m=\u001B[39m fuc_p_theta2[\u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# print(fuc_p_x1, fuc_p_y1)\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m fuc_p1 \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p_pdf_pdf\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mfuc_p_x1\u001B[49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m[\u001B[38;5;28mint\u001B[39m(fuc_p_y1)]\n\u001B[0;32m     10\u001B[0m fuc_p2 \u001B[38;5;241m=\u001B[39m fuc_p_pdf_pdf[\u001B[38;5;28mint\u001B[39m(fuc_p_x2)][\u001B[38;5;28mint\u001B[39m(fuc_p_y2)]\n\u001B[0;32m     11\u001B[0m fuc_pp \u001B[38;5;241m=\u001B[39m fuc_p1 \u001B[38;5;241m/\u001B[39m fuc_p2\n",
-      "\u001B[1;31mIndexError\u001B[0m: index 509 is out of bounds for axis 0 with size 500"
+      "Input \u001B[1;32mIn [31]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m SHM_Data_baseline \u001B[38;5;241m=\u001B[39m def_get_array(SHM_Data_baseline_locate)\n\u001B[0;32m      4\u001B[0m tof, dmg_array \u001B[38;5;241m=\u001B[39m def_multi_tof(locate)\n\u001B[1;32m----> 5\u001B[0m theta \u001B[38;5;241m=\u001B[39m \u001B[43mdef_mcmc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdmg_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtof\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m def_plot_fig(theta, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[180, 345], [10, 10]\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Input \u001B[1;32mIn [29]\u001B[0m, in \u001B[0;36mdef_mcmc\u001B[1;34m(def_mcmc_array, def_mcmc_tof)\u001B[0m\n\u001B[0;32m     29\u001B[0m     LK[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m=\u001B[39m LK[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m/\u001B[39m \u001B[38;5;241m1.07\u001B[39m\n\u001B[0;32m     30\u001B[0m theta_k \u001B[38;5;241m=\u001B[39m [def_theta[i][\u001B[38;5;241m0\u001B[39m], theta_2]\n\u001B[1;32m---> 31\u001B[0m alpha \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf_pdf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtheta_k\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     32\u001B[0m r \u001B[38;5;241m=\u001B[39m alpha \u001B[38;5;241m*\u001B[39m math\u001B[38;5;241m.\u001B[39mexp(\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m \u001B[38;5;241m*\u001B[39m fuc_ig(def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m], def_mcmc_tof) \u001B[38;5;241m*\u001B[39m (fuc_q(theta_k, def_mcmc_tof) \u001B[38;5;241m-\u001B[39m fuc_q([def_theta[i][\u001B[38;5;241m0\u001B[39m], def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]], def_mcmc_tof)))\n\u001B[0;32m     33\u001B[0m R \u001B[38;5;241m=\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom()\n",
+      "Input \u001B[1;32mIn [26]\u001B[0m, in \u001B[0;36mfuc_p\u001B[1;34m(fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2)\u001B[0m\n\u001B[0;32m      7\u001B[0m fuc_p_y2 \u001B[38;5;241m=\u001B[39m fuc_p_theta2[\u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# print(fuc_p_x1, fuc_p_y1)\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m fuc_p1 \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p_pdf_pdf\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mfuc_p_x1\u001B[49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mfuc_p_y1\u001B[49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m     10\u001B[0m fuc_p2 \u001B[38;5;241m=\u001B[39m fuc_p_pdf_pdf[\u001B[38;5;28mint\u001B[39m(fuc_p_x2)][\u001B[38;5;28mint\u001B[39m(fuc_p_y2)]\n\u001B[0;32m     11\u001B[0m fuc_pp \u001B[38;5;241m=\u001B[39m fuc_p1 \u001B[38;5;241m/\u001B[39m fuc_p2\n",
+      "\u001B[1;31mIndexError\u001B[0m: index 514 is out of bounds for axis 0 with size 500"
      ]
     },
     {
@@ -483,6 +483,18 @@
     "\n",
     "def_plot_fig(theta, '[180, 345], [10, 10]')"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
